====================
2018/8/17
v 6-0.5

- Now on branch Feldspar.
- Changed " != REAL_NULL " to "notNull" usages.
- Changed nomenclature:
-- ObjectBool is now BoolObject
-- ObjectString is now StringObject
-- ObjectInteger is now IntegerObject
-- ObjectDecimal is now DecimalNumObject


====================
2018/8/6
v 5-0.5

- Changed Variable::setFuncReturn(Object*, bool) to force variables to change functions when assigned data.
- Changed COPPER_LANG_VERSION to 3 to reflect changes in data storage in variables.


====================
2018/8/4 - 2018/8/5
v 5-0.44

- Fixed bug in Engine::run() that failed to return EngineResult::Done when at the end of the input stream.
- Fixed nasty bug in Scope that tried using temp variables to init the RefVariableStorage in the hash table.
- Changed RefVariableStorage management to allow sharing rather than copying. This also increases engine speed.


FileInStream
- atEOS() now checks the fail bits.
- getNextByte() now checks for the file being open.


====================
2018/4/26, 2018/7/18,19, 2018/8/2
v 5-0.43

- Added support for execute-with-alternative-super-variable ("xwsv").
- Bumped up COPPER_LANG_VERSION to 2.3 to reflect addition of execute-with-alternative-super function.
- Fixed typo in #ifdef in VarAddress::first().
- Changed CallbackWrapper run() to check against EngineResult::Error rather than EngineResult::Ok.
- Changed Scope to have settable initial size and set default to smaller. Stack frames use larger size. Sizes are #defines:
-- CU_FUNCTION_SCOPE_SIZE = 15
-- CU_STACK_FRAME_SCOPE_SIZE = 100
--- NOTE: The speed updates are incredible!
- Fixed duplicate definition of uint from RHHash.h competing with utilList.h
- Added util::List::operator[] for const settings.

EngineMsgToStr
- Updated with error messages for execute-width-alternative-super errors.

Added StringInStream
Added FileInStream

docs
- Updated
- Small fixes


====================
2018/4/7 - 2018/4/26
v 5-0.42
