@@ -9,6 +9,7 @@ v 6-0.5
 -- ObjectString is now StringObject
 -- ObjectInteger is now IntegerObject
 -- ObjectDecimal is now DecimalNumObject
+-- FunctionContainer is now FunctionObject.
 
 
 ====================
